--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-less": "~0.8.1",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-bg-shell": "~2.3.0",
     "grunt-contrib-uglify": "~0.2.5",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-sass": "~0.5.1"
   }
 }
