--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,8 @@
 {
   "name": "sitename",
   "version": "1.0.0",
-  "dependencies": {
-    "jquery": "latest",
-    "modernizr": "latest",
-    "foundation": "latest"
+  "devDependencies": {
+    "foundation": "~5.0.2",
+    "angularjs": "*"
   }
 }
